<resources>
    <string name="app_name">finalPriject</string>
    <string name="hello">hi，你好</string>
    <string name="todo">TODO</string>
    <string name="phone">手机号</string>
    <string name="welcome">hi，欢迎加入</string>
    <string name="tishi1">请输入手机号</string>
    <string name="tishi2">请输入你的用户名</string>
    <string name="tishi3">请输入您的密码</string>
    <string name="tishi4">请再次输入你的密码</string>
    <string name="tishi5">注册</string>
    <string name="pn">账号</string>
    <string name="pasw">密码</string>
    <string name="anyway">hi~最近好吗</string>
    <string name="tishi6">登录</string>
    <string name="author">作者</string>
    <string name="azhe">佚名</string>
    <string name="time1">时间</string>
    <string name="one">增加书单</string>
    <string name="two">身高体重</string>
    <string name="three">视力情况</string>
    <string name="dsp">学而不思则罔，思而不学则殆</string>
    <string name="re2">修改</string>
    <string name="online">看看豆瓣书评</string>
    <string name="bookn">请输入书名</string>
    <string name="weight">请输入体重</string>
    <string name="time">XX年-XX月-XX日</string>
    <string name="high">这里是之前读入的数据</string>
    <string name="sug">一些小建议</string>
    <string name="bt">提交</string>
</resources>