<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/thr"
    tools:context=".MainActivity3">

    <EditText
        android:id="@+id/uid"
        android:layout_width="219dp"
        android:layout_height="50dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="#FAF9F9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/id"
        android:layout_width="91dp"
        android:layout_height="45dp"
        android:layout_marginTop="188dp"
        android:text="@string/pn"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/uid"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/ups"
        android:layout_width="219dp"
        android:layout_height="50dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#FFFFFF"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uid"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/ps"
        android:layout_width="91dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:text="@string/pasw"

        android:textColor="#FFFFFF"

        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ups"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:gravity="center"
        android:text="@string/anyway"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="219dp"
        android:layout_height="50dp"
        android:backgroundTint="#F2F4F4"
        android:text="@string/tishi6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.665" />

    <Button
        android:id="@+id/button2"
        android:layout_width="219dp"
        android:layout_height="50dp"
        android:backgroundTint="#F3EFEF"
        android:text="@string/tishi5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.16" />

</androidx.constraintlayout.widget.ConstraintLayout>